--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
@@ -34,7 +34,7 @@
       <string notr="true" />
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="elideMode" >
       <enum>Qt::ElideNone</enum>
@@ -1569,7 +1569,7 @@ p, li { white-space: pre-wrap; }
          <x>401</x>
          <y>9</y>
          <width>286</width>
-         <height>262</height>
+         <height>293</height>
         </rect>
        </property>
        <property name="title" >
@@ -1771,6 +1771,33 @@ p, li { white-space: pre-wrap; }
           </property>
           <property name="text" >
            <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0" >
+         <widget class="QLabel" name="label_35" >
+          <property name="text" >
+           <string>Status: </string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="2" colspan="4" >
+         <widget class="QLabel" name="centre_stat" >
+          <property name="frameShape" >
+           <enum>QFrame::Box</enum>
+          </property>
+          <property name="frameShadow" >
+           <enum>QFrame::Raised</enum>
+          </property>
+          <property name="text" >
+           <string>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
+&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Stopped&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+          </property>
+          <property name="textFormat" >
+           <enum>Qt::RichText</enum>
           </property>
          </widget>
         </item>
