--- a/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
+++ b/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
@@ -6,22 +6,16 @@
     <x>0</x>
     <y>0</y>
     <width>642</width>
-    <height>391</height>
+    <height>482</height>
    </rect>
   </property>
   <property name="sizePolicy" >
-   <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+   <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize" >
-   <size>
-    <width>642</width>
-    <height>391</height>
-   </size>
-  </property>
-  <property name="maximumSize" >
    <size>
     <width>642</width>
     <height>391</height>
@@ -37,7 +31,7 @@
    <property name="geometry" >
     <rect>
      <x>10</x>
-     <y>350</y>
+     <y>440</y>
      <width>621</width>
      <height>28</height>
     </rect>
@@ -78,7 +72,7 @@
      <x>10</x>
      <y>10</y>
      <width>300</width>
-     <height>329</height>
+     <height>421</height>
     </rect>
    </property>
    <property name="sizePolicy" >
@@ -96,7 +90,7 @@
       <x>9</x>
       <y>19</y>
       <width>281</width>
-      <height>301</height>
+      <height>391</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout" >
@@ -160,9 +154,33 @@
       </widget>
      </item>
      <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3" >
+       <item>
+        <widget class="QPushButton" name="btnConstruct" >
+         <property name="text" >
+          <string>Construct</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_4" >
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0" >
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
       <widget class="QLabel" name="label_2" >
        <property name="text" >
-        <string>TextLabel</string>
+        <string>Parameters</string>
        </property>
       </widget>
      </item>
@@ -202,8 +220,8 @@
     <rect>
      <x>320</x>
      <y>10</y>
-     <width>301</width>
-     <height>329</height>
+     <width>311</width>
+     <height>191</height>
     </rect>
    </property>
    <property name="sizePolicy" >
@@ -220,8 +238,8 @@
      <rect>
       <x>9</x>
       <y>19</y>
-      <width>281</width>
-      <height>301</height>
+      <width>291</width>
+      <height>162</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2" >
@@ -329,20 +347,105 @@
      <item>
       <widget class="QLineEdit" name="leParamTable" />
      </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3" >
+   <property name="geometry" >
+    <rect>
+     <x>320</x>
+     <y>200</y>
+     <width>311</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <property name="title" >
+    <string>Peak Tool Associations</string>
+   </property>
+   <widget class="QWidget" name="verticalLayoutWidget_3" >
+    <property name="geometry" >
+     <rect>
+      <x>9</x>
+      <y>19</y>
+      <width>291</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_3" >
      <item>
-      <spacer name="verticalSpacer" >
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0" >
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
+      <layout class="QHBoxLayout" name="horizontalLayout_4" >
+       <item>
+        <widget class="QLabel" name="label_7" >
+         <property name="text" >
+          <string>Centre</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cbPTCentre" />
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_5" >
+       <item>
+        <widget class="QLabel" name="label_8" >
+         <property name="text" >
+          <string>Height</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cbPTHeight" />
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_6" >
+       <item>
+        <widget class="QLabel" name="label_9" >
+         <property name="text" >
+          <string>Width</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cbPTWidth" />
+       </item>
+      </layout>
      </item>
     </layout>
+    <zorder>horizontalLayoutWidget_2</zorder>
+    <zorder>label_7</zorder>
+    <zorder>horizontalLayoutWidget_2</zorder>
+    <zorder>horizontalLayoutWidget_3</zorder>
+    <zorder>horizontalLayoutWidget_4</zorder>
+   </widget>
+   <widget class="QLabel" name="label_10" >
+    <property name="geometry" >
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>291</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text" >
+     <string>Width formula </string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="leWidthFormula" >
+    <property name="geometry" >
+     <rect>
+      <x>10</x>
+      <y>130</y>
+      <width>291</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="toolTip" >
+     <string comment="wdwdwd" >Calculates the "width" parameter from the FWHM. Use "w" for the FWHM.</string>
+    </property>
    </widget>
   </widget>
  </widget>
