--- a/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
+++ b/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
@@ -18,7 +18,7 @@
   <property name="minimumSize" >
    <size>
     <width>642</width>
-    <height>391</height>
+    <height>482</height>
    </size>
   </property>
   <property name="windowTitle" >
@@ -134,6 +134,11 @@
          <string>Lorentzian</string>
         </property>
        </item>
+       <item>
+        <property name="text" >
+         <string>User</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
@@ -150,6 +155,9 @@
          <horstretch>1</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="toolTip" >
+        <string>User defiend fitting function. Use "x" to represent the argument.</string>
        </property>
       </widget>
      </item>
