--- a/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
+++ b/Code/qtiplot/qtiplot/src/Mantid/PeakFitDialog.ui
@@ -221,15 +221,22 @@
       </widget>
      </item>
     </layout>
+    <zorder>label</zorder>
+    <zorder>cbFunction</zorder>
+    <zorder>lblExpression</zorder>
+    <zorder>leExpression</zorder>
+    <zorder>label_2</zorder>
+    <zorder>tableParams</zorder>
+    <zorder>groupBox_3</zorder>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2" >
    <property name="geometry" >
     <rect>
      <x>320</x>
-     <y>10</y>
+     <y>210</y>
      <width>311</width>
-     <height>191</height>
+     <height>221</height>
     </rect>
    </property>
    <property name="sizePolicy" >
@@ -247,10 +254,17 @@
       <x>9</x>
       <y>19</y>
       <width>291</width>
-      <height>162</height>
+      <height>187</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2" >
+     <item>
+      <widget class="QCheckBox" name="chbEnableEditIO" >
+       <property name="text" >
+        <string>Edit input / output options</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QLabel" name="label_3" >
        <property name="sizePolicy" >
@@ -362,9 +376,9 @@
    <property name="geometry" >
     <rect>
      <x>320</x>
-     <y>200</y>
+     <y>10</y>
      <width>311</width>
-     <height>231</height>
+     <height>191</height>
     </rect>
    </property>
    <property name="title" >
@@ -423,11 +437,6 @@
       </layout>
      </item>
     </layout>
-    <zorder>horizontalLayoutWidget_2</zorder>
-    <zorder>label_7</zorder>
-    <zorder>horizontalLayoutWidget_2</zorder>
-    <zorder>horizontalLayoutWidget_3</zorder>
-    <zorder>horizontalLayoutWidget_4</zorder>
    </widget>
    <widget class="QLabel" name="label_10" >
     <property name="geometry" >
